# plums-pot

./: .gitignore  package-lock.json
backend/: pyproject.toml  requirements.txt
backend/config/: middleware.py  settings.py  urls.py
backend/myenv/: pyvenv.cfg
backend/user_management/user_management/: settings.py  urls.py
backend/users/: middleware.py  models.py  serializers.py  tests.py  validators.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx  theme.jsx
frontend/src/components/: AddUser.jsx  AddUserModal.jsx  AppLayout.jsx  CustomHeader.jsx  Header.jsx  SearchBar.jsx  Sidebar.jsx  UserAdd.jsx  UserDetail.jsx  UserEdit.jsx  UserForm.jsx  UserList.jsx  UserListTable.jsx  UserManagement.jsx  UserSearchFilter.jsx  useUsers.jsx
frontend/src/mock/: handlers.js
frontend/src/mocks/: browser.jsx  data.json  dummy.json  handlers.js  handlers.jsx
frontend/src/pages/: AddUserPage.jsx  EditUserPage.jsx  UserListPage.jsx  UserPage.jsx
frontend/src/state/: state.js
frontend/src/store/: atoms.js  atoms.jsx
frontend/src/styles/: index.css
