[tool.poetry]
name = "plums-pot"
version = "0.1.0"
description = ""
authors = ["jungmir <ham4051@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.15.2"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
